adicionado controladores de ADM para editar pedidos da comanda, fechar  reabrir, assim como mostrar calculo total
